rezerv qismen hazır

--- a/src/main/resources/templates/admin/team/create.html
+++ b/src/main/resources/templates/admin/team/create.html
@@ -6,7 +6,7 @@
 <main layout:fragment="content">
     <div class="container mt-4">
         <h3 class="text-primary mb-4">
-            <i class="bi bi-person-plus-fill me-2"></i> Komanda üzvü əlavə et
+            <i class="bi bi-person-plus-fill me-2"></i> Yeni komanda üzvü əlavə et
         </h3>
 
         <form th:action="@{/admin/team-members/create}" th:object="${member}" method="post">
