--- a/src/main/resources/templates/admin/team/edit.html
+++ b/src/main/resources/templates/admin/team/edit.html
@@ -8,7 +8,7 @@
             <i class="bi bi-person-plus-fill me-2"></i> Komanda üzvü əlavə et
         </h3>
 
-        <form th:action="@{/admin/team-members/create}" th:object="${member}" method="post">
+        <form th:action="@{'/admin/team-members/edit/' + ${memberId}}" th:object="${member}" method="post">
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <label>Ad Soyad</label>
