adminReservation is ready

--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -66,6 +66,13 @@
           </li>
 
           <li class="sidebar-item">
+            <a th:href="@{/admin/reservations}" class="sidebar-link">
+              <i class="bi bi-calendar-check fs-5 me-2"></i>
+              <span>Rezervasiyalar</span>
+            </a>
+          </li>
+
+          <li class="sidebar-item">
             <a th:href="@{/admin/testimonials}" class="sidebar-link">
               <i class="bi bi-chat-quote fs-5 me-2"></i>
               <span>Rəylər</span>
