staff prifileEdit is ready

--- a/src/main/resources/templates/staff/layout.html
+++ b/src/main/resources/templates/staff/layout.html
@@ -51,6 +51,14 @@
           </li>
 
           <li class="sidebar-item">
+            <a href="/staff/profile/edit" class="sidebar-link">
+              <i class="bi bi-pencil"></i>
+              <span>Profil redaktə</span>
+            </a>
+          </li>
+
+
+          <li class="sidebar-item">
             <a href="/logout" class="sidebar-link text-danger">
               <i class="bi bi-box-arrow-right"></i>
               <span>Çıxış</span>
