miniDashboard is ready

--- a/src/main/resources/templates/staff/layout.html
+++ b/src/main/resources/templates/staff/layout.html
@@ -30,7 +30,7 @@
           <li class="sidebar-title">Menyu</li>
 
           <li class="sidebar-item">
-            <a th:href="@{'/staff/dashboard/' + ${staffId}}" class="sidebar-link">
+            <a th:href="@{/staff/dashboard}" class="sidebar-link">
               <i class="bi bi-speedometer2"></i>
               <span>Panel</span>
             </a>
