--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -135,6 +135,14 @@
             </a>
           </li>
 
+          <li class="sidebar-item">
+            <a th:href="@{/admin/staff}" class="sidebar-link">
+              <i class="bi bi-person-badge"></i>
+              <span>Ustalar</span>
+            </a>
+          </li>
+
+
 
         </ul>
       </div>
